<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2010  Just Objects B.V.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/metatracker_title">
    <PreferenceCategory
            android:title="@string/pref_cat_behavior">

        <CheckBoxPreference
                android:key="pref_enablesound"
                android:title="@string/pref_enablesound_title"
                android:summary="@string/pref_enablesound_summary"
                android:defaultValue="false"
                />
        <!--        <CheckBoxPreference
                    android:key="disableblanking"
                    android:title="@string/disableblanking_title"
                    android:summary="@string/disableblanking_summary"
                    android:defaultValue="false"
                    />  -->

    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_cat_server">
        <EditTextPreference
                android:key="pref_server_url"
                android:dialogTitle="@string/pref_server_url_dlg_title"
                 android:dialogMessage="@string/pref_server_url_dlg_msg"
                 android:title="@string/pref_server_url_title"
                 android:summary="@string/pref_server_url_summary"
                 android:defaultValue="http://geotracing.com/tland"/>

        <EditTextPreference
                android:key="pref_server_user"
                android:singleLine="true"
                android:summary="@string/pref_server_user_summary"
                android:title="@string/pref_server_user_title"  />

        <EditTextPreference 
                android:key="pref_server_password"
                android:singleLine="true"
                android:password="true"
                android:summary="@string/pref_server_password_summary"
                android:title="@string/pref_server_password_title"  />

    </PreferenceCategory>
</PreferenceScreen>